feat: adicionando doc swagger rota users id.
